[gd_scene load_steps=15 format=3 uid="uid://btu0x8rpq7yt2"]

[ext_resource type="Texture2D" uid="uid://6gjdb8opms7k" path="res://kenney_pixel-platformer/Tiles/Characters/tile_0000.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://bjb4s7v2wrgpe" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://cx7d21h1s2chw" path="res://kenney_pixel-platformer/Tiles/Characters/tile_0001.png" id="1_onrkg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(62, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(40, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(62, 56)

[sub_resource type="Animation" id="Animation_hqtel"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_onrkg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "death"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_4flbx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -300), Vector2(0, 600)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("1_onrkg"), ExtResource("1_4flbx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "walk"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("1_onrkg"), ExtResource("1_4flbx")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jxqw"]
_data = {
&"RESET": SubResource("Animation_hqtel"),
&"death": SubResource("Animation_2hs0m"),
&"jump": SubResource("Animation_sweqy"),
&"walk": SubResource("Animation_i3pqv")
}

[sub_resource type="Animation" id="Animation_dw050"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0.784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite2D/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1jxqw"]
resource_name = "hurting"
length = 0.76
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0, 0, 0.784314), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.76),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b26j0"]
_data = {
&"RESET": SubResource("Animation_dw050"),
&"hurting": SubResource("Animation_1jxqw")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_i3pqv")
jump_force = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
z_index = 2
texture_filter = 1
rotation = 6.28319
scale = Vector2(3, 3)
texture = ExtResource("1_onrkg")
flip_h = true

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
visible = false
self_modulate = Color(1, 0, 0, 0.784314)
offset_left = -20.6667
offset_top = -19.3333
offset_right = 19.3333
offset_bottom = 20.6667

[node name="jumpBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="jumpBox"]
position = Vector2(0, 30.5)
shape = SubResource("RectangleShape2D_i3pqv")

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_hqtel")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1jxqw")
}

[node name="AnimationPlayerHurt" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b26j0")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
